--- a/android/BumbleBee/app/src/main/res/layout/main_layout_1.xml
+++ b/android/BumbleBee/app/src/main/res/layout/main_layout_1.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_motion" >
+    android:background="@android:color/white" >
 
     <RelativeLayout
         android:id="@+id/res_layout"
