--- a/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
+++ b/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
@@ -7,6 +7,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.example.styledmap.MapsActivityRaw"
+            map:cameraZoom="10" />
+
         <ImageView
             android:id="@+id/header_cover_image"
             android:layout_width="match_parent"
@@ -32,17 +42,18 @@
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:src="@drawable/profile_image"
             app:civ_border_width="2dp"
+            app:civ_fill_color="@android:color/white"
             android:layout_below="@+id/header_cover_image"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-60dp"
+            android:layout_marginTop="-90dp"
             android:padding="20dp"
             android:elevation="5dp"
             android:scaleType="centerCrop"
-            app:civ_border_color="#FF000000"/>
+            app:civ_border_color="#FFFFFFFF"/>
 
         <RelativeLayout
             android:id="@+id/profile_layout"
@@ -77,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="110dp"
                 android:text="Viral Android"
                 android:textColor="#fff"
                 android:textSize="24sp"
