--- a/android/BumbleBee/app/src/main/res/values/colors.xml
+++ b/android/BumbleBee/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="greenMarker">#1f7a1f</color>
+    <color name="redMarker">#990000</color>
 </resources>
