--- a/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
+++ b/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
@@ -109,5 +109,11 @@
                 android:textSize="14sp" />
         </RelativeLayout>
 
-
+    <lecho.lib.hellocharts.view.LineChartView
+        android:id="@+id/chart"
+        android:layout_width="match_parent"
+        android:background="#80FFFFFF"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="20dp"
+        android:layout_height="100dp" />
     </RelativeLayout>
