--- a/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
+++ b/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
@@ -116,4 +116,12 @@
         android:layout_alignParentBottom="true"
         android:paddingBottom="20dp"
         android:layout_height="150dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/chart_label"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@id/chart"
+        android:background="@android:color/transparent"
+        android:layout_height="wrap_content" />
     </RelativeLayout>
