--- a/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
+++ b/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
@@ -122,6 +122,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/chart"
+        android:layout_marginLeft="10dp"
+        android:textSize="14sp"
         android:background="@android:color/transparent"
         android:layout_height="wrap_content" />
     </RelativeLayout>
