--- a/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
+++ b/android/BumbleBee/app/src/main/res/layout/activity_starter.xml
@@ -109,6 +109,22 @@
                 android:textSize="14sp" />
         </RelativeLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/alert_tv"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@id/chart"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:padding="8dp"
+        android:textColor="@android:color/white"
+        android:background="@color/transRed"
+        android:layout_height="wrap_content" />
+
     <lecho.lib.hellocharts.view.LineChartView
         android:id="@+id/chart"
         android:layout_width="match_parent"
@@ -122,9 +138,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/chart"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
-        android:textSize="18sp"
+        android:layout_marginRight="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="12dp"
+        android:textSize="24sp"
         android:background="@android:color/transparent"
         android:layout_height="wrap_content" />
     </RelativeLayout>
