--- a/android/BumbleBee/app/src/main/res/values/colors.xml
+++ b/android/BumbleBee/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="greenMarker">#1f7a1f</color>
     <color name="redMarker">#990000</color>
+    <color name="transRed">#FFFF8080</color>
 </resources>
